--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "@coverhound/eslint-config-coverhound",
-  "version": "1.4.0",
+  "version": "1.4.1-pre.2",
   "description": "Coverhound's very own eslint shareable config enforcing NEXT LEVEL javascript standards.",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint -c ./index.js example.js",
-    "publish": "np --yolo"
+    "lint": "eslint -c ./index.js example.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +17,7 @@
     "babel-eslint": "^7.1.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
+    "eslint-import-resolver-babel-module": "^4.0.0",
     "eslint-plugin-filenames": "^1.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
